// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Public router should render the Public router lock component 1`] = `
[
  {
    "Component": undefined,
    "ErrorBoundary": undefined,
    "action": undefined,
    "caseSensitive": undefined,
    "children": undefined,
    "element": <LazyProvider>
      <LazyPoweringComponent />
    </LazyProvider>,
    "errorElement": undefined,
    "handle": undefined,
    "hasErrorBoundary": false,
    "id": "0-0",
    "index": undefined,
    "lazy": undefined,
    "loader": undefined,
    "path": "",
    "shouldRevalidate": undefined,
  },
  {
    "Component": undefined,
    "ErrorBoundary": undefined,
    "action": undefined,
    "caseSensitive": undefined,
    "children": undefined,
    "element": <Navigate
      replace={true}
      to="/"
    />,
    "errorElement": undefined,
    "handle": undefined,
    "hasErrorBoundary": false,
    "id": "0-1",
    "index": undefined,
    "lazy": undefined,
    "loader": undefined,
    "path": "*",
    "shouldRevalidate": undefined,
  },
]
`;

exports[`Public router should render the Public router power component 1`] = `
[
  {
    "Component": undefined,
    "ErrorBoundary": undefined,
    "action": undefined,
    "caseSensitive": undefined,
    "children": undefined,
    "element": <LazyProvider>
      <LazyPowerComponent />
    </LazyProvider>,
    "errorElement": undefined,
    "handle": undefined,
    "hasErrorBoundary": false,
    "id": "0-0",
    "index": undefined,
    "lazy": undefined,
    "loader": undefined,
    "path": "",
    "shouldRevalidate": undefined,
  },
  {
    "Component": undefined,
    "ErrorBoundary": undefined,
    "action": undefined,
    "caseSensitive": undefined,
    "children": undefined,
    "element": <Navigate
      replace={true}
      to="/"
    />,
    "errorElement": undefined,
    "handle": undefined,
    "hasErrorBoundary": false,
    "id": "0-1",
    "index": undefined,
    "lazy": undefined,
    "loader": undefined,
    "path": "*",
    "shouldRevalidate": undefined,
  },
]
`;

exports[`Public router should render the Public router powering component 1`] = `
[
  {
    "Component": undefined,
    "ErrorBoundary": undefined,
    "action": undefined,
    "caseSensitive": undefined,
    "children": undefined,
    "element": <LazyProvider>
      <LazyPoweringComponent />
    </LazyProvider>,
    "errorElement": undefined,
    "handle": undefined,
    "hasErrorBoundary": false,
    "id": "0-0",
    "index": undefined,
    "lazy": undefined,
    "loader": undefined,
    "path": "",
    "shouldRevalidate": undefined,
  },
  {
    "Component": undefined,
    "ErrorBoundary": undefined,
    "action": undefined,
    "caseSensitive": undefined,
    "children": undefined,
    "element": <Navigate
      replace={true}
      to="/"
    />,
    "errorElement": undefined,
    "handle": undefined,
    "hasErrorBoundary": false,
    "id": "0-1",
    "index": undefined,
    "lazy": undefined,
    "loader": undefined,
    "path": "*",
    "shouldRevalidate": undefined,
  },
]
`;
